Fix book view when the image is too small

--- a/styles.less
+++ b/styles.less
@@ -217,6 +217,7 @@ body {
       background-color: #fff;
       display: block;
       max-width: 100%;
+      margin: 0 auto;
     }
 
     .published-date {
